<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Whine &amp; Dine</string>
    <string name="about_name">About Whine &amp; Dine</string>
    <string name="title_timing">Timing</string>
    <string name="title_history">History</string>
    <string name="action_about">About</string>
    <string name="radio_left">Left</string>
    <string name="radio_right">Right</string>
    <string name="timer_main">00:00</string>
    <string name="timer_ms">000</string>

    <string name="toggle_pause">||</string>
    <string name="toggle_left">L</string>
    <string name="toggle_right">R</string>

    <string name="btn_done">Done</string>
    <string name="btn_reset">Reset Timer</string>
    <string name="btn_save">Save</string>

</resources>
